--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,7 @@
   flex-direction: column;
   gap: 2rem;
 }
+main {
+  margin-left: 220px; /* espacio reservado para la sidebar */
+  padding: 2rem;
+}
