--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav>
-  <div class="logo">Mi Agenda</div>
+<nav class="sidebar">
+  <div class="logo">MayAgenda</div>
   <div class="links">
-    <a routerLink="/panel" routerLinkActive="active">Panel</a>
+    <a routerLink="/panel" routerLinkActive="active">Inicio</a>
     <a routerLink="/clientes" routerLinkActive="active">Clientes</a>
     <a routerLink="/citas" routerLinkActive="active">Citas</a>
   </div>
